# clayland

./: Makefile.am  clayland-buffer.c  clayland-drm.c  clayland-private.h  clayland-shm.c  clayland.c  clayland.h  configure.ac  dri2.c  example.c  input.c  shell.c  wayland-source.c
demos/: Makefile.am  example.c
src/: Makefile.am  clayland-buffer.c  clayland-drm-buffer.c  clayland-drm-compositor.c  clayland-drm.c  clayland-drm.h  clayland-private.h  clayland-shm-buffer.c  clayland-shm.c  clayland-surface.c  clayland.c  clayland.h  dri2-x11.c  dri2.c  input.c  output.c  shell.c  wayland-source.c
